embed ALL the things